--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="game-img">
       <div class="how-to">
         <h1>HOW TO PLAY:</h1>
-        <li>Use <img src="./images/seta-esquerda.png" alt="seta-esquerda-img" class="seta"> and <img src="images/seta-direita.png" alt="seta-direita-img" class="seta"> </li>
+        <li>Use <img src="./Images/seta-esquerda.png" alt="seta-esquerda-img" class="seta"> and <img src="images/seta-direita.png" alt="seta-direita-img" class="seta"> </li>
         <li>Catch <img src="./images/laco-rosa.gif" alt="laco-rosa-img" id="laco-rosa"> to get points.</li>
         <li>Avoid <img src="./images/laco-azul.png" alt="laco-azul-img" id="laco-azul">  to not lose points.</li>
         <li>Escape from <img src="./images/fralda-suja.jpg" alt="fralda-suja-img" id="fralda-suja"> to not lose the game.</li>
