imagem de fundo tela principal

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Gender Reveal</title>
 </head>
 <body>
-  <img id= "fundo" src= "./images/fundo.png">
+  <img id= "fundo" src= "./Images/fundo.png">
    
   <section id= "botoes">
 
