mudanca botao css

--- a/about-me.html
+++ b/about-me.html
@@ -16,5 +16,19 @@
         <p> A few months ago I had the best surprise, I AM PREGNANT!!</p>
         <p> And that's the theme of the game, I hope you all enjoy it!</p>
     </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div>
+        <p id="home-link"><a href = "index.html"> Home </a></p>
+      </div>
 
+</body>
+<footer>
+    <p>© 2021 Made with love by Thais Fernandes</p>
+  </footer>
+</html>
 
