--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
    
   <section id= "botoes">
 
-  <div class= "aboutbutton">
+  <div>
     <a href="./about-me.html">
-      <button>About Me</button>
+      <button class= "aboutbutton">About Me</button>
   </a>
   </div>
-  <br />
-  <div class= "howto">
+  <div>
     <a href="./how-to.html">
-      <button>How to Play</button>
+      <button class= "howto">How to Play</button>
   </a>
   </div>
-  <br />
-      <div class="button-div">
-        <button id="start-button">Start Game</button>
+      <div>
+        <button class="button-div" id="start-button">Start Game</button>
       </div>
     </section>
     <br />
