--- a/how-to.html
+++ b/how-to.html
@@ -24,6 +24,20 @@
         <strong>Get 20 points to win!</strong>
         <strong> HAVE FUN!</strong>
       </div>
+      <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div>
+        <p id="home-link"><a href = "index.html"> Home </a></p>
+      </div>
+
+</body>
+<footer>
+    <p>© 2021 Made with love by Thais Fernandes</p>
+  </footer>
 
     </section>
     </body>
