--- a/about-me.html
+++ b/about-me.html
@@ -12,9 +12,9 @@
     <div>
         <h1> Hey everyone,</h1>
         <h2> My name is Thais Fernandes, I'm Web Development student at Ironhack!</h2>
-        <p> I am from Brazil, but from the past five years I'm living in Portugal.</p>
-        <p> A few months ago I had the best surprise, I AM PREGNANT!!</p>
-        <p> And that's the theme of the game, I hope you all enjoy it!</p>
+        <h2> I am from Brazil, but from the past five years I'm living in Portugal.</h2>
+        <h2> A few months ago I had the best surprise, I AM PREGNANT!!</h2>
+        <h2> And that's the theme of the game, I hope you all enjoy it!</h2>
     </div>
     <br />
     <br />
