--- a/how-to.html
+++ b/how-to.html
@@ -16,12 +16,21 @@
       <li>Use <img src="./Images/seta-esquerda.png" alt="seta-esquerda-img" class="seta"> and <img src="Images/seta-direita.png" alt="seta-direita-img" class="seta"> </li>
       <li>Catch <img src="./Images/laco-rosa.gif" alt="laco-rosa-img" id="laco-rosa"> to get points.</li>
       <li>Avoid <img src="./Images/laco-azul.png" alt="laco-azul-img" id="laco-azul">  to not lose points.</li>
+      <br />
+      <br />
+      <br />
       <li>Escape from <img src="./Images/fralda-suja.jpg" alt="fralda-suja-img" id="fralda-suja"> to not lose the game.</li>
       <br>
     </div>
 
     <div class= "jogo">
-        <strong>Get 20 points to win!</strong>
+        <strong>GET 20 POINTS TO WIN!</strong>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
         <strong> HAVE FUN!</strong>
       </div>
       <br />
